# temper

./: Cargo.toml  GLOSSARY.md  HARDWARE.md  README.md  THERMODYNAMIC_COMPUTING.md
.claude/: CLAUDE.md
src/: expr.rs  gpu.rs  lib.rs  main.rs  thermodynamic.rs  viz.rs
src/loss_functions/: iris.wgsl  iris_grad.wgsl  mnist_pca.wgsl  mnist_pca_grad.wgsl  timeseries.wgsl  timeseries_grad.wgsl  wine.wgsl  wine_grad.wgsl
src/shaders/: generate.wgsl  nbody.wgsl  thermodynamic.wgsl
src/thermodynamic/: system.rs  types.rs
src/viz/: landscapes.rs
