[package]
name = "temper"
version = "0.1.0"
edition = "2024"
description = "GPU-accelerated thermodynamic particle system for optimization, sampling, and entropy"
license = "MIT"

[features]
default = ["gpu"]
gpu = ["wgpu", "bytemuck", "pollster"]
viz = ["iced"]

[dependencies]
rand_core = "0.9"
getrandom = "0.3"
half = { version = "2.4", features = ["bytemuck"] }

# GPU acceleration (optional)
wgpu = { version = "27", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }

# Visualization (optional)
iced = { version = "0.14.0", features = ["canvas", "tokio"], optional = true }

# Benchmarks
[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
required-features = ["gpu"]

[[bin]]
name = "thermodynamic-benchmark"
path = "src/bin/thermodynamic-benchmark.rs"
required-features = ["gpu"]

[[bin]]
name = "classic-benchmark"
path = "src/bin/classic-benchmark.rs"
required-features = ["gpu"]

[[bin]]
name = "nn-benchmark"
path = "src/bin/nn-benchmark.rs"
required-features = ["gpu"]

[[bin]]
name = "deep-nn-benchmark"
path = "src/bin/deep-nn-benchmark.rs"
required-features = ["gpu"]

# Visualizations
[[bin]]
name = "thermodynamic-viz"
path = "src/bin/thermodynamic-viz.rs"
required-features = ["viz", "gpu"]

[[bin]]
name = "annealing-demo"
path = "src/bin/annealing-demo.rs"
required-features = ["viz", "gpu"]

# Annealing visualizations
[[bin]]
name = "rastrigin-annealing"
path = "src/bin/rastrigin-annealing.rs"
required-features = ["viz", "gpu"]

[[bin]]
name = "ackley-annealing"
path = "src/bin/ackley-annealing.rs"
required-features = ["viz", "gpu"]

[[bin]]
name = "rosenbrock-annealing"
path = "src/bin/rosenbrock-annealing.rs"
required-features = ["viz", "gpu"]

[[bin]]
name = "schwefel-annealing"
path = "src/bin/schwefel-annealing.rs"
required-features = ["viz", "gpu"]

[[bin]]
name = "adaptive-annealing"
path = "src/bin/adaptive-annealing.rs"
required-features = ["viz", "gpu"]

# Advanced demos
[[bin]]
name = "optimizer-comparison"
path = "src/bin/optimizer-comparison.rs"
required-features = ["gpu"]

[[bin]]
name = "parallel-tempering"
path = "src/bin/parallel-tempering.rs"
required-features = ["gpu"]

[[bin]]
name = "bayesian-sampling"
path = "src/bin/bayesian-sampling.rs"
required-features = ["gpu"]

[[bin]]
name = "hyperparam-tuning"
path = "src/bin/hyperparam-tuning.rs"
required-features = ["gpu"]

[[bin]]
name = "thermodynamic-stream"
path = "src/bin/thermodynamic-stream.rs"
required-features = ["gpu"]

[[bin]]
name = "thermodynamic-8d"
path = "src/bin/thermodynamic-8d.rs"
required-features = ["gpu"]

[[bin]]
name = "high-dim-benchmark"
path = "src/bin/high-dim-benchmark.rs"
required-features = ["gpu"]

[[bin]]
name = "custom-expr-demo"
path = "src/bin/custom-expr-demo.rs"
required-features = ["gpu"]

[[bin]]
name = "bayesian-uncertainty"
path = "src/bin/bayesian-uncertainty.rs"
required-features = ["gpu"]

[[bin]]
name = "mode-discovery"
path = "src/bin/mode-discovery.rs"
required-features = ["gpu"]

[[bin]]
name = "scale-test"
path = "src/bin/scale-test.rs"
required-features = ["gpu"]

[[bin]]
name = "gradient-benchmark"
path = "src/bin/gradient-benchmark.rs"
required-features = ["gpu"]

[[bin]]
name = "rng-demo"
path = "src/bin/rng-demo.rs"
required-features = ["gpu"]
